# BoeReaderBot

./: .gitignore  AGENT.md  README.md  pyproject.toml
src/: bot.py  daily_fetch.py  main.py  pdf_extractor.py  pipeline.py  storage.py  summarizer.py  telegram_sender.py  text_extractor.py
test/: test_main.py
